fixed some details

--- a/tex/desenvolvimento.tex
+++ b/tex/desenvolvimento.tex
@@ -321,7 +321,7 @@ O valor médio dos pixels no espaço HSB foi obtido para cada imagem, conforme m
 
 A faixa de valores de SST foi dividida em três índices (4,0º - 8.0º, 8.0º - 13.0º e 13.0º - 17.0º), de forma que os resultados estivessem em função de cada faixa. Ademais, os três modelos construídos utilizaram 50\% das imagens enquanto que as demais foram empregadas para o teste. 
 
-A melhor variável obtida foi a matiz, que alcançou uma correlação de Pearson igual a -0,92, enquanto que a saturação e brilho alcançaram coeficientes iguais a 0,85 e 0,66 respectivamente. A matiz apresentou também o menor desvio padrão para os três índices (2,73, 6,31 e 2,44), enquanto que o desvio padrão para o brilho indicou que os valores dos pontos eram bastante dispersos (35,15, 18,09 e 22,79 nos índices 1, 2 e 3 respectivamente). O modelo que emprega matiz apresentou os menores valores para erro médio quadrático no índice 2 e 3 (0,22 e 0,03 ºBrix respectivamente) e a maior Raiz do erro quadrático médio (RMSE, \textit{Root Mean Square Error}) para o índice 1 (0,06 ºBrix). Os modelos com saturação apresentaram os maiores RMSE nos índices 1 e 3, enquanto que o modelo com brilho foi superior no índice 1. Como a diferença entre os erros foi pequena, considerou-se que a matiz provou ser a melhor variável para determinação de SST em mangas, devido ao melhor valor de correlação de Pearson. 
+A melhor variável obtida foi a matiz, que alcançou uma correlação de Pearson igual a -0,92, enquanto que a saturação e brilho alcançaram coeficientes iguais a 0,85 e 0,66 respectivamente. A matiz apresentou também o menor desvio padrão para os três índices (2,73, 6,31 e 2,44), enquanto que o desvio padrão para o brilho indicou que os valores dos pontos eram bastante dispersos (35,15, 18,09 e 22,79 nos índices 1, 2 e 3 respectivamente). O modelo que emprega matiz apresentou os menores valores para a raiz do erro quadrático médio (RMSE, \textit{Root Mean Square Error}) no índice 2 e 3 (0,02 e 0,03 ºBrix respectivamente) e a maior RMSE para o índice 1 (0,06 ºBrix). Os modelos com saturação apresentaram os maiores RMSE nos índices 1 e 3, enquanto que o modelo com brilho foi superior no índice 1. Como a diferença entre os erros foi pequena, considerou-se que a matiz provou ser a melhor variável para determinação de SST em mangas, devido ao melhor valor de correlação de Pearson. 
 
 Yossy et al. (2017) propôs um sistema de classificação de mangas quanto ao estádio de maturação e tamanho com o emprego de redes neurais. 52 mangas da variedade Gincu\footnote{\label{ftnote:gincu}A variedade Gedong Gincu é uma das mais populares da Indonésia, lugar de onde se originou. Ela possui um tamanho médio, com seu comprimento entre 10 e 12cm, e peso entre 200 e 250g. Além disso, ela tem um formato arredondado, cor alaranjada e sabor adocicado.} foram empregadas para o treinamento do modelo. Elas possuíam dois tamanhos diferentes (grande e pequeno) e dois estádios diferentes (verde e madura), assim, as classes definidas pelos autores foram grande-madura, pequena-madura, grande-verde e grande-pequena. As imagens foram tiradas através de uma \textit{webcam} a 30 cm de distância e armazenadas como JPEG.
 
