--- a/tex/desenvolvimento.tex
+++ b/tex/desenvolvimento.tex
@@ -353,7 +353,7 @@ No trabalho de Salunkhe e Patil (2015), determinaram-se os estádios de maturaç
 
 Dentre as mangas colhidas, 80 foram classificadas manualmente, com 20 mangas para cada estádio, de forma que foram obtidos limiares (R/G, R/B, S/H) que separassem as classes. A partir das faixas de limiares obtidos, foi desenvolvido um algoritmo para classificação das mangas, através de comandos \textit{if-else}.
 
-Para o teste do algoritmo, foram empregados três conjuntos de 24 mangas em diferentes estádios. Para o modelo com RGB e HSV, respectivamente, obteve-se uma acurácia de 90,4\% e 84,2\%, taxas de falso positivos iguais a 2,57\% e 7,9\%, verdadeiros positivos iguais a 89,77\% e 86,74\%. As razões RGB aumentaram conforme o progresso da maturação, mas com diferentes taxas. A cor azul possuiu o menor peso nas imagens, verde possuiu o maior peso em mangas verdes e o vermelho possuiu o maior peso em mangas completamente maduras.
+Para o teste do algoritmo, foram empregados três conjuntos de 24 mangas em diferentes estádios. Para o modelo com RGB e HSV, respectivamente, obteve-se uma acurácia de 90,4\% e 84,2\%, taxas de falsos positivos iguais a 2,57\% e 7,9\%, verdadeiros positivos iguais a 89,77\% e 86,74\%. As razões RGB aumentaram conforme o progresso da maturação, mas com diferentes taxas. A cor azul possuiu o menor peso nas imagens, verde possuiu o maior peso em mangas verdes e o vermelho possuiu o maior peso em mangas completamente maduras.
 
 Pandey, Gamit e Naik (2014) classificaram mangas quanto à sua saúde e tamanho. As mangas coletadas eram das variedades Totapuri\footnote{\label{ftnote:totapuri}Variedade cultivada em sua maior parte na Índia e Sri Lanka, possuindo uma cor amarela esverdeada.}, Badami\footnote{\label{ftnote:badami}As mangas Badami são douradas em sua superfície, possuem uma polpa sem fibras e um aroma floral, com um sabor semelhante às da manga Alphonso\footref{ftnote:alphonso}.} e Neelam\footnote{\label{ftnote:neelam}As mangas desta variedade são originárias da Índia e possuem uma aparência uniforme, cor dourada e um aroma característico. Saiba mais em: http://www.sunrisenaturals.in/products/13/neelam-mango-pulp.php.}, sendo que elas diferiam quanto ao formato e tamanho. Dentre as 100 colhidas, 60 eram saudáveis e 40 possuíam uma das três seguintes doenças: antracnose, putrefação por bactéria e putrefação na haste. As imagens das mangas foram coletadas por uma câmera digital Nikon DLSR D90, que foi posicionada no topo de uma câmara que também continha uma lâmpada CFL 14 W. A câmera estava conectada a um computador, de forma que as imagens foram transferidas para um cartão de memória. As imagens obtidas possuíam 640x480 pixels. 
 
