fixed appendix and refs

--- a/tex/anexos.tex
+++ b/tex/anexos.tex
@@ -1,5 +1,7 @@
-\begin{anexosenv}
-\chapter{\textit{Strings} de busca empregadas} \label{anex:anexo1}
+\begin{center}
+\chapter*{Apêndice A - \textit{Strings} de busca empregadas} \label{anex:anexo1}
+\end{center}
+\addcontentsline{toc}{chapter}{Apêndice A - \textit{Strings} de busca empregadas}
 
 Os dez artigos estudados foram obtidos após buscas no \textit{Google Scholar}, onde foram utilizadas diferentes \textit{strings}, conforme mostra a Tabela abaixo. 
 
@@ -89,6 +91,3 @@ Os dez artigos estudados foram obtidos após buscas no \textit{Google Scholar}, 
 \end{longtable}
 \legend{\textbf{Fonte: } (Autor, 2019).}
 \end{center}
-
-
-\end{anexosenv}
