--- a/tex/refs.tex
+++ b/tex/refs.tex
@@ -1,4 +1,7 @@
-\chapter{Referências}
+\begin{center}
+\chapter*{Referências}
+\end{center}
+\addcontentsline{toc}{chapter}{Referências}
 
 \noindent ALVES, E. D. L.; VECCHIA, F. A. S. Análise de diferentes métodos de interpolação para a precipitação pluvial no Estado de Goiás. \textit{Acta Scientiarum. Human and Social Sciences}, v. 33, n. 2, 2011. Disponível em: <http://www.redalyc.org>. Acesso em: 01 ago. 2018.
 \\
